--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -7,18 +7,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+
+
     <!-- 태블릿 지원을 위한 부분 -->
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
 
-    <applicationA
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <uses-library android:name="com.kkensu.www.imagepager" android:required="true" />
+
         <activity android:name="com.kkensu.www.sample.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,8 +31,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--<activity android:name="com.kkensu.www.library.ImagePagerActivity">-->
-        <!--</activity>-->
-    </applicationA>
+    </application>
 
 </manifest>
