--- a/imagepager/src/main/AndroidManifest.xml
+++ b/imagepager/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <application>
+    <application android:name=".base.App">
         <activity
             android:name=".ImagePagerActivity"
             android:screenOrientation="portrait" />
