--- a/imagepager/src/main/AndroidManifest.xml
+++ b/imagepager/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <application android:name=".base.App">
+    <application
+        android:name=".base.App"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".ImagePagerActivity"
             android:screenOrientation="portrait" />
     </application>
+
+
 </manifest>
