--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -7,8 +7,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-
-
     <!-- 태블릿 지원을 위한 부분 -->
     <uses-feature
         android:name="android.hardware.telephony"
@@ -19,10 +17,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <uses-library android:name="com.kkensu.www.imagepager" android:required="true" />
 
         <activity android:name="com.kkensu.www.sample.MainActivity">
             <intent-filter>
@@ -31,6 +28,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name="com.kkensu.www.imagepager.ImagePagerActivity"></activity>
     </application>
 
 </manifest>
