--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 *.iml
-.gradle
-/local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+.gradle/
+local.properties
+.idea/
 .DS_Store
-/build
+/build/
+*/build/
 /captures
-.externalNativeBuild
+/schema/episodes
+!gradle-wrapper.jar
+/doc
+gen-src
+/*_test.json
+/updateSchema.sh
+/node_modules
+/schema/buxi-model.architect
