java -> kotlin 변경

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.kkensu.www.imagepager.ImagePagerActivity"></activity>
+        <activity android:name="com.kkensu.www.imagepager.ImagePagerActivity2"></activity>
     </application>
 
 </manifest>
