--- a/imagepager/build.gradle
+++ b/imagepager/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     /** Photo Attacher **/
     implementation "com.github.chrisbanes:PhotoView:2.0.0"
 
+    /** Event Bus  **/
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
     /** Gson **/
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "androidx.core:core-ktx:1.3.0"
