--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -44,5 +44,7 @@ dependencies {
     /** Photo Attacher **/
     implementation "com.github.chrisbanes:PhotoView:2.0.0"
 
+    implementation 'gun0912.ted:tedpermission:2.2.3'
+
     implementation project(':imagepager')
 }
