--- a/imagepager/build.gradle
+++ b/imagepager/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-kapt' // Use experimental kapt implementation
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 29
+        minSdkVersion 23
+        targetSdkVersion 30
         versionCode 1
         versionName "0.0.3"
 
@@ -27,6 +27,7 @@ android {
 
     buildFeatures {
         dataBinding = true
+        viewBinding = true
     }
 
     compileOptions {
@@ -38,28 +39,34 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation "com.google.android.material:material:1.3.0-alpha01"
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation "com.google.android.material:material:1.5.0-alpha01"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    /** ktx **/
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.activity:activity-ktx:1.2.4"
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
     /** GlideCenterCrop 이미지 로딩 라이브러리 */
-    implementation "com.github.bumptech.glide:glide:4.9.0"
-    implementation "jp.wasabeef:glide-transformations:3.1.1"
-    implementation "jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1"
-    annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
+    implementation "com.github.bumptech.glide:glide:4.11.0"
+    implementation "jp.wasabeef:glide-transformations:4.3.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.11.0"
 
     /** Photo Attacher **/
     implementation "com.github.chrisbanes:PhotoView:2.0.0"
 
     /** Event Bus  **/
-    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'org.greenrobot:eventbus:3.2.0'
 
     /** Gson **/
     implementation "com.google.code.gson:gson:2.8.6"
-    implementation "androidx.core:core-ktx:1.3.0"
+    implementation "androidx.core:core-ktx:1.6.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
